1-argocd-apps/apps-base/helloworld/custom-env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
  namespace: apps-base
spec:
  template:
    spec:
      containers:
        - name: base-helloworld
