1-argocd-apps/apps-base/helloworld/service.yml
apiVersion: v1
kind: Service
metadata:
  name: base-helloworld-service
  namespace: apps-base
spec:
  selector:
    app: base-helloworld
  type: ClusterIP
  ports:
  - port: 80
    name: web
    targetPort: 80
